[package]
name = "cozy-matches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
async-stream = "0.3.3"
futures-util = "0.3.24"
futures-core = "0.3.24"
cozy-chess = "0.3.0"
vampirc-uci = "0.11.1"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.35"
