[package]
name = "cozy-matches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.12"
cozy-chess = "0.3.2"
cozy-uci = { git = "https://github.com/analog-hors/cozy-uci" }
thiserror = "1.0.35"
async-stream = "0.3.5"
